--- a/client/login_form/create_acc.ui
+++ b/client/login_form/create_acc.ui
@@ -49,7 +49,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>100</y>
+     <y>80</y>
      <width>131</width>
      <height>20</height>
     </rect>
@@ -67,7 +67,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>170</y>
+     <y>130</y>
      <width>151</width>
      <height>20</height>
     </rect>
@@ -81,11 +81,11 @@
     <string>Введите пароль</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_4">
+  <widget class="QLabel" name="label_email">
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>290</y>
+     <y>230</y>
      <width>141</width>
      <height>31</height>
     </rect>
@@ -103,7 +103,7 @@
    <property name="geometry">
     <rect>
      <x>180</x>
-     <y>90</y>
+     <y>80</y>
      <width>210</width>
      <height>30</height>
     </rect>
@@ -118,7 +118,7 @@
    <property name="geometry">
     <rect>
      <x>180</x>
-     <y>160</y>
+     <y>130</y>
      <width>210</width>
      <height>30</height>
     </rect>
@@ -136,7 +136,7 @@
    <property name="geometry">
     <rect>
      <x>180</x>
-     <y>290</y>
+     <y>230</y>
      <width>210</width>
      <height>30</height>
     </rect>
@@ -151,9 +151,9 @@
   <widget class="QPushButton" name="btn_sing_up">
    <property name="geometry">
     <rect>
-     <x>100</x>
+     <x>180</x>
      <y>340</y>
-     <width>201</width>
+     <width>211</width>
      <height>41</height>
     </rect>
    </property>
@@ -170,7 +170,7 @@
    <property name="geometry">
     <rect>
      <x>180</x>
-     <y>230</y>
+     <y>180</y>
      <width>210</width>
      <height>30</height>
     </rect>
@@ -187,11 +187,11 @@
     <enum>QLineEdit::Password</enum>
    </property>
   </widget>
-  <widget class="QLabel" name="label_password_2">
+  <widget class="QLabel" name="label_password_password_conform">
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>230</y>
+     <y>180</y>
      <width>161</width>
      <height>21</height>
     </rect>
@@ -203,6 +203,61 @@
    </property>
    <property name="text">
     <string>Потвердите пароль</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_info">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>280</y>
+     <width>361</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>14</pointsize>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(255, 0, 0);</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButton_back_login">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>350</y>
+     <width>111</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Вход в чат</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>320</y>
+     <width>121</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>10</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>Уже есть аккаунт ?</string>
    </property>
   </widget>
  </widget>
