--- a/client/login_form/login.ui
+++ b/client/login_form/login.ui
@@ -137,7 +137,7 @@
     <rect>
      <x>110</x>
      <y>350</y>
-     <width>201</width>
+     <width>161</width>
      <height>41</height>
     </rect>
    </property>
@@ -153,7 +153,7 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>130</x>
+     <x>120</x>
      <y>320</y>
      <width>151</width>
      <height>21</height>
@@ -183,7 +183,7 @@
     <string notr="true">color: rgb(255, 0, 0);</string>
    </property>
    <property name="text">
-    <string> </string>
+    <string/>
    </property>
    <property name="alignment">
     <set>Qt::AlignCenter</set>
